# AdventOfCode2020

./: Cargo.toml  README.md
day02_password_philosophy_part2/: Cargo.toml
day02_password_philosophy_part2/src/: main.rs
day03_toboggan_trajectory_part1/src/: main.rs
day03_toboggan_trajectory_part2/: Cargo.toml
day04_passport_processing_part1/src/: main.rs
day06_custom_customs_part2/: Cargo.toml
day06_custom_customs_part2/src/: main.rs
day08_handheld_halting_part1/: Cargo.toml
day08_handheld_halting_part2/: Cargo.toml
day08_handheld_halting_part2/src/: main.rs
day09_encoding_error_part2/: Cargo.toml
day10_adapter_array_part1/: Cargo.toml
day10_adapter_array_part1/src/: main.rs
day10_adapter_array_part2/: Cargo.toml
day10_adapter_array_part2/src/: main.rs
day11_seating_system_part1/: Cargo.toml
day11_seating_system_part1/src/: main.rs
day11_seating_system_part2/: Cargo.toml
day11_seating_system_part2/src/: main.rs
day12_rain_risk_part1/: Cargo.toml
day12_rain_risk_part1/src/: main.rs
day12_rain_risk_part2/: Cargo.toml
day12_rain_risk_part2/src/: main.rs
day13_shuttle_search_part1/: Cargo.toml
day13_shuttle_search_part1/src/: main.rs
day13_shuttle_search_part2/: Cargo.toml
day14_docking_data_part1/: Cargo.toml
day14_docking_data_part2/: Cargo.toml
day15_rambunctious_recitation_part1/: Cargo.toml
day15_rambunctious_recitation_part2/: Cargo.toml
day16_ticket_translation_part1/: Cargo.toml
day16_ticket_translation_part2/: Cargo.toml
day17_conway_cubes_part1/: Cargo.toml
day17_conway_cubes_part2/: Cargo.toml
day18_operation_order_part1/: Cargo.toml
day18_operation_order_part2/: Cargo.toml
day19_monster_messages_part1/: Cargo.toml
day19_monster_messages_part2/: Cargo.toml
day1_report_repair_part1/: Cargo.toml
day1_report_repair_part2/: Cargo.toml
day2_password_philosophy_part1/: Cargo.toml
day3_toboggan_trajectory_part1/: Cargo.toml
day4_passport_processing_part1/: Cargo.toml
day4_passport_processing_part2/: Cargo.toml
day5_binary_boarding_part1/: Cargo.toml
day5_binary_boarding_part2/: Cargo.toml
day6_custom_customs_part1/: Cargo.toml
day7_handy_haversacks_part1/: Cargo.toml
day7_handy_haversacks_part2/: Cargo.toml
day9_encoding_error_part1/: Cargo.toml
(+26 files in other folders)
