[workspace]
members = [
    'day1_report_repair_part1',
    'day1_report_repair_part2',
    'day2_password_philosophy_part1',
    'day2_password_philosophy_part2',
    'day3_toboggan_trajectory_part1',
    'day3_toboggan_trajectory_part2',
    'day4_passport_processing_part1',
    'day4_passport_processing_part2',
    'day5_binary_boarding_part1',
    'day5_binary_boarding_part2',
    'day6_custom_customs_part1',
    'day6_custom_customs_part2',
    'day7_handy_haversacks_part1',
    'day7_handy_haversacks_part2',
    'day8_handheld_halting_part1',
    'day8_handheld_halting_part2',
    'day9_encoding_error_part1',
    'day9_encoding_error_part2',
    'day10_adapter_array_part1',
    'day10_adapter_array_part2',
]
