[workspace]
members = [
    'day01_report_repair_part1',
    'day01_report_repair_part2',
    'day02_password_philosophy_part1',
    'day02_password_philosophy_part2',
    'day03_toboggan_trajectory_part1',
    'day03_toboggan_trajectory_part2',
    'day04_passport_processing_part1',
    'day04_passport_processing_part2',
    'day05_binary_boarding_part1',
    'day05_binary_boarding_part2',
    'day06_custom_customs_part1',
    'day06_custom_customs_part2',
    'day07_handy_haversacks_part1',
    'day07_handy_haversacks_part2',
    'day08_handheld_halting_part1',
    'day08_handheld_halting_part2',
    'day09_encoding_error_part1',
    'day09_encoding_error_part2',
    'day10_adapter_array_part1',
    'day10_adapter_array_part2',
    'day11_seating_system_part1',
    'day11_seating_system_part2',
    'day12_rain_risk_part1',
    'day12_rain_risk_part2',
    'day13_shuttle_search_part1',
    'day13_shuttle_search_part2',
    'day14_docking_data_part1',
    'day14_docking_data_part2',
    'day15_rambunctious_recitation_part1',
    'day15_rambunctious_recitation_part2',
]
